# LMS_FastAPI

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 65b68a624d54_second_migration.py  703e64df3d5e_first_migration.py
data_base/: db_setup.py
data_base/db_models/: course.py  mixins.py  user.py
endpoints/: courses.py  users.py
endpoints/api_utils/: courses_utility.py  users_utility.py
