[tool.poetry]
name = "learning-management-system"
version = "0.1.0"
description = ""
authors = ["agafurov <amir.a.gafurov@gmail.com>"]
readme = "README.md"
packages = [{include = "learning_management_system"}]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"
pydantic = "^1.10.5"
sqlalchemy = "^2.0.4"
psycopg2-binary = "^2.9.5"
sqlalchemy-utils = "^0.40.0"
alembic = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
